k8s/appointment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: appointment-service:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  type: ClusterIP
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
