k8s/identity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: identity-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  type: ClusterIP
  selector:
    app: identity-service
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
