k8s/patient-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
