k8s/telemedicine-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
        - name: telemedicine-service
          image: telemedicine-service:latest
          ports:
            - containerPort: 4008
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  type: ClusterIP
  selector:
    app: telemedicine-service
  ports:
    - protocol: TCP
      port: 4008
      targetPort: 4008
